...
						placeholder="Type name"
						value={typeName}
					/>
					<View style={styles.actions}>
						<AppButton
							isCompact
							label="Cancel"
							onPress={() => setIsCreating(false)}
							variant="secondary"
						/>
						<AppButton
							isCompact
							label="Create"
...
