enum DropdownType {
	SOURCE = "Source",
	DESTINATION = "Destination",
	TRIP = "Trips",
	CATEGORY = "Categories",
	INVESTMENT = "Investments",
}

export default DropdownType;
